--- a/CleanUpTasks/CleanUpTasks/PluginResources.resx
+++ b/CleanUpTasks/CleanUpTasks/PluginResources.resx
@@ -121,6 +121,9 @@
   <data name="ForumIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\ForumIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Information" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Plugin_Name" xml:space="preserve">
     <value>Cleanup Source</value>
   </data>
@@ -138,5 +141,8 @@
   </data>
   <data name="TellMe_SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellMe_SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_WarningMessage" xml:space="preserve">
+    <value>something</value>
   </data>
 </root>
