created information pop-up window

--- a/CleanUpTasks/CleanUpTasks/PluginResources.resx
+++ b/CleanUpTasks/CleanUpTasks/PluginResources.resx
@@ -143,6 +143,15 @@
     <value>Resources\TellMe_SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TellMe_WarningMessage" xml:space="preserve">
-    <value>something</value>
+    <value>CleanUp Tasks assist users by either, CleanUp Source or CleanUp Target
+To engage with either of these tasks , follow these steps:
+
+1.     In the Files View, select your file(s)
+2.     Under Home Tab find File Actions Group
+3.     Use the Batch Tasks dropdown menu
+4.     Selecteither of the 2 supported tasks
+
+Note: Batch Tasks can also be found in the Projects and Editor View
+Tip: CleanUp Source needs to be run as a separate task, before you apply any target translation or run the Pre-Translate task.</value>
   </data>
 </root>
