--- a/CleanUpTasks/CleanUpTasks/PluginResources.resx
+++ b/CleanUpTasks/CleanUpTasks/PluginResources.resx
@@ -121,6 +121,9 @@
   <data name="ForumIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\ForumIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Information" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Plugin_Name" xml:space="preserve">
     <value>Cleanup Source</value>
   </data>
@@ -129,5 +132,26 @@
   </data>
   <data name="TellMe1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellMe1.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_Documentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Documentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_WarningMessage" xml:space="preserve">
+    <value>CleanUp Tasks assist users by either, CleanUp Source or CleanUp Target
+To engage with either of these tasks , follow these steps:
+
+1.     In the Files View, select your file(s)
+2.     Under Home Tab find File Actions Group
+3.     Use the Batch Tasks dropdown menu
+4.     Selecteither of the 2 supported tasks
+
+Note: Batch Tasks can also be found in the Projects and Editor View
+Tip: CleanUp Source needs to be run as a separate task, before you apply any target translation or run the Pre-Translate task.</value>
   </data>
 </root>
