--- a/DSI Viewer/Sdl.Community.SdiViewer/PluginResources.resx
+++ b/DSI Viewer/Sdl.Community.SdiViewer/PluginResources.resx
@@ -206,15 +206,21 @@
     <value>click here</value>
   </data>
   <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
-    <value>for documentation.</value>
+    <value>to view the documentation.</value>
   </data>
   <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
-    <value>To engage with the app, follow these steps:
+    <value>To engage with DSI Viewer, follow these steps:
 
-1. In Edition view, go to View tab
-2. Under the Information group, find DSI Viewer</value>
+   1. In Edition view, go to View tab
+   2. Under the Information group, find DSI Viewer</value>
   </data>
   <data name="SettingsAction_Title" xml:space="preserve">
     <value>Access DSI Viewer</value>
+  </data>
+  <data name="Information" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_Forum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Forum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
