--- a/StarTransit/Sdl.Community.StarTransit/PluginResources.resx
+++ b/StarTransit/Sdl.Community.StarTransit/PluginResources.resx
@@ -369,9 +369,14 @@ The selected Transit package doesn't contain any Translation Memories.</value>
     <value>Resources\StarTransit.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TellMe_WarningMessage" xml:space="preserve">
-    <value>To engage with this plugin, follow these steps:
+    <value>To engage with StarTransit, follow these steps:
 
-    1. In Projects view, go to Home tab
-    2. Locate the StarTransit Group</value>
+1.    Via the Projects View, go to Home tab
+2.    Locate the StarTransit Group
+
+Tip: You can assign shortcuts via; File - Options - Keyboard Shortcuts - StarTransit</value>
+  </data>
+  <data name="Information" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
