IATE: done with cahnges

--- a/IATETerminologyProvider/IATETerminologyProvider/PluginResources.resx
+++ b/IATETerminologyProvider/IATETerminologyProvider/PluginResources.resx
@@ -199,4 +199,13 @@
   <data name="Forum" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Forum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IATE_logo_cropped_1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IATE-logo-cropped[1].png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IATE-logo-cropped[1].ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMe_Documentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe_Documentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
