--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
@@ -211,4 +211,11 @@ This feature currently works for all target languages except "ES" (Spanish), "JA
   <data name="Information" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PreserveFormatting_Tooltip" xml:space="preserve">
+    <value>Sets whether the translation engine should respect the original formatting, even if it would usually correct some aspects.
+
+The formatting aspects affected by this setting include:
+  Punctuation at the beginning and end of the sentence
+  Upper/lower case at the beginning of the sentence</value>
+  </data>
 </root>
