--- a/GoogleCloudTranslationProvider/PluginResources.resx
+++ b/GoogleCloudTranslationProvider/PluginResources.resx
@@ -548,4 +548,34 @@ This action cannot be undone.</value>
   <data name="sourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\sourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TellMeAppStoreForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeAppStoreForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeDocumentation1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeDocumentation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeSettings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeSourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMe\TellMeSourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google_cloud_256x206" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\google-cloud.256x206.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google_cloud_512x412" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\google-cloud.512x412.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GoogleCloud" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\GoogleCloud.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="information_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\information-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
