--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/PluginResources.resx
@@ -221,4 +221,10 @@ The formatting aspects affected by this setting include:
   <data name="ValidateButton.ToolTip" xml:space="preserve">
     <value>Highlight terms that are missing source or target text, or are duplicated.</value>
   </data>
+  <data name="GlobalSettings_LoadGlossaryIds_Global_settings_deserialization_failed__Settings_were_reset_to_default_" xml:space="preserve">
+    <value>Global settings deserialization failed. Settings were reset to default.</value>
+  </data>
+  <data name="GlobalSettings_LoadGlossaryIds_Global_settings" xml:space="preserve">
+    <value>Global settings</value>
+  </data>
 </root>
