TQA 5.0.0.4: Change default filename

--- a/TQA/TQA/PluginResources.resx
+++ b/TQA/TQA/PluginResources.resx
@@ -242,6 +242,6 @@
     <value>Invalid TQA Profile: {0}</value>
   </data>
   <data name="RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY_LL" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY_LL.xlsm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Resources\RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY.xlsm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
