--- a/TQA/TQA/PluginResources.resx
+++ b/TQA/TQA/PluginResources.resx
@@ -181,12 +181,6 @@
   <data name="ResetToDef" xml:space="preserve">
     <value>Reset to default</value>
   </data>
-  <data name="RWS_5_401_F002_MQM_QE_Form_XXX_XXXXXX_XXX" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\RWS-5-401-F002-MQM QE Form-XXX_XXXXXX_XXX.xlsm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="SDL_5_401_F001_QE_Form_XXX_XXXXXX_XXX_XX" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\RWS-5-401-F001-QE Form_XXX_XXXXXX_XXX_XX.XLSM;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="tqa3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\tqa3.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -227,24 +221,30 @@
     <value>TQA Reporting</value>
   </data>
   <data name="Label_TQAProfile" xml:space="preserve">
-	  <value>TQA Profile:</value>
+    <value>TQA Profile:</value>
   </data>
   <data name="Label_Empty" xml:space="preserve">
-	  <value>Empty</value>
+    <value>Empty</value>
   </data>
   <data name="Label_J2450Standard" xml:space="preserve">
-	  <value>J2450 Standard</value>
+    <value>J2450 Standard</value>
   </data>
   <data name="Label_MQMStandard" xml:space="preserve">
-	  <value>MQM Standard</value>
+    <value>MQM Standard</value>
   </data>
   <data name="Label_NotCompatible" xml:space="preserve">
-	  <value>Not compatible</value>
+    <value>Not compatible</value>
   </data>
   <data name="Message_Invalid" xml:space="preserve">
-	  <value>Invalid TQA Profile: {0}</value>
+    <value>Invalid TQA Profile: {0}</value>
   </data>
   <data name="RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY_LL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY.xlsm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="SDL_5_401_F001_QE_Form_XXX_XXXXXX_XXX_XX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\RWS-5-401-F001-J2450 QE Form_XXX_XXXXXX_XXX_XX.xlsm;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="String" xml:space="preserve">
+    <value>RWS-5-401-F002-MQM QE Form-CLIENT_MMM_YY_LL</value>
   </data>
 </root>
