ApplyTMTemplate 4.0.1.0 - SDLCOM-6420: econd template on an existing Translation Memory. - Updated Excel and SDLTMS imports to use language resources, preventing modification of bundles with non-targeted languages. - Fixed IndexOutOfRangeException in MainWindowViewModel when adding files.
### New Features:
- Added a **Save Preferences** button in the main view.
- Added a **Select Settings File** button on the top input.
- Cached the settings file every time a new file is saved or loaded.
- Added a new **Merge/Overwrite Properties** selection button for Translation Memories.

--- a/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
+++ b/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
@@ -367,4 +367,31 @@
   <data name="TellMe_SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellMe_SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TMSettings_Created" xml:space="preserve">
+    <value>The configuration was generated successfully</value>
+  </data>
+  <data name="SaveApplyTMPreferences" xml:space="preserve">
+    <value>Save Apply TM Settings</value>
+  </data>
+  <data name="Create_ApplyTMSettings" xml:space="preserve">
+    <value>Create Apply TM Settings</value>
+  </data>
+  <data name="ApplyTM_fileName" xml:space="preserve">
+    <value>My Settings</value>
+  </data>
+  <data name="InvalidApplyTMSettings" xml:space="preserve">
+    <value>Invalid Apply TM Settings file</value>
+  </data>
+  <data name="ApplyTMSettings_MissingTMs" xml:space="preserve">
+    <value>Missing Translation Memories Found</value>
+  </data>
+  <data name="ApplyTMSettings_InvalidTMs" xml:space="preserve">
+    <value>Invalid Translation Memories Found</value>
+  </data>
+  <data name="ApplyTMSettings_ButtonTitle" xml:space="preserve">
+    <value>Use Apply TM Settings</value>
+  </data>
+  <data name="ProjectTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ProjectTemplate.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
