--- a/Reports.Viewer/Reports.Viewer/PluginResources.resx
+++ b/Reports.Viewer/Reports.Viewer/PluginResources.resx
@@ -325,4 +325,7 @@
   <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WindowTitle_SaveProjectReports" xml:space="preserve">
+    <value>Save Project Reports</value>
+  </data>
 </root>
