ApplyTMTemplate 4.0.1.3 - SDLCOM-6168: - Introduced a new TextBox to show the current settings in use or a message indicating that the user's settings are cached.

--- a/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
+++ b/ApplyTMTemplate/Sdl.Community.ApplyTMTemplate/PluginResources.resx
@@ -397,4 +397,7 @@
   <data name="ApplyTMTemplate_SaveSettingsTooltip" xml:space="preserve">
     <value>Save current settings</value>
   </data>
+  <data name="ApplyTMTemplatePathDeletedMessage" xml:space="preserve">
+    <value>You are currently using cached settings. Please save the file to ensure these settings are not lost.</value>
+  </data>
 </root>
