--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/PluginResources.resx
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/PluginResources.resx
@@ -515,4 +515,7 @@ Select 'No' to cancel this action
   <data name="Filter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Filter.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AddReportFolder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\AddReportFolder.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
