Change Tracker: add source TU instead of target

--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/PluginResources.resx
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/PluginResources.resx
@@ -518,4 +518,7 @@ Select 'No' to cancel this action
   <data name="Export" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Export.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Sync" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Sync.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
